<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="10dp"
    android:layout_marginStart="10dp"
    android:layout_marginTop="5dp"
    android:background="@drawable/shape"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="119dp"
        android:layout_weight="1"
        android:contentDescription="@string/imagenproducto"
        android:minHeight="80dp"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/ensalada" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TableLayout
            android:layout_width="176dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="176dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/nombre_del_producto"
                    android:textAppearance="@style/TextAppearance.AppCompat.Button"
                    android:visibility="visible" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:lineSpacingExtra="36sp"
                    android:text="@string/descripcion" />
            </TableRow>
        </TableLayout>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="173dp"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:fontFamily="monospace"
            android:gravity="center"
            android:text="@string/precio"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textDirection="ltr"
            android:textSize="24sp" />

    </LinearLayout>

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:background="#105B95"
        android:elevation="23dp"
        android:minHeight="30dp"
        android:text="@string/agregar_al_carrito"
        android:textColor="#FFFFFF" />

</LinearLayout>
