<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="50dp"
    android:id="@+id/balance_fragment"
    tools:context=".BalanceFragment"
    tools:layout_editor_absoluteY="131dp">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/textView2"
        android:layout_width="213dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="28dp"
        android:lineSpacingExtra="8sp"
        android:text="@string/credito_actual"
        android:textAllCaps="false"
        android:textSize="30sp"
        android:textStyle="normal|bold"
        app:layout_constrainedHeight="false"
        app:layout_constrainedWidth="false"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="34dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="26dp"
        android:background="@drawable/border_view"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

    </HorizontalScrollView>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="41dp"
        android:layout_marginStart="48dp"
        android:text="Actualmente tienes"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toStartOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="34dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="15dp"
        android:text="@string/saldo"
        android:textColor="#5be1fa"
        android:textSize="10sp"
        app:layout_constraintEnd_toStartOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="35dp"
        android:layout_marginEnd="64dp"
        android:text="@string/_75_pts"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="53dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_marginEnd="28dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="20dp"
            android:background="#e2e2e2" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="213dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="28dp"
            android:lineSpacingExtra="8sp"
            android:text="Recargar"
            android:textAllCaps="false"
            android:textSize="30sp"
            android:textStyle="normal|bold" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="28dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:inputType="numberDecimal"
            tools:text="Puntos a recargar" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="28dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="20dp"
            android:background="?attr/colorPrimary"
            android:text="Recarga"
            android:textColor="@android:color/background_light" />
    </LinearLayout>


</android.support.constraint.ConstraintLayout>